# su3_bench

./: .gitignore  CMakeLists.txt  Makefile.cuda  Makefile.dpcpp  Makefile.hip  Makefile.openacc  Makefile.openmp  build_corona.sh  build_lassen.sh  lattice.hpp  mat_nn_cuda.hpp  mat_nn_dpcpp.hpp  mat_nn_hip.hpp  mat_nn_kokkos.hpp  mat_nn_openacc.hpp  mat_nn_openmp.hpp  mat_nn_raja.hpp  mat_nn_sycl.hpp  su3.hpp  su3_nn_bench.cpp
